Fix iNettuts IE bug about displaying collapse button

--- a/html/css/custom.css
+++ b/html/css/custom.css
@@ -81,7 +81,7 @@
 }
 
 .inettuts-container {
-    min-height:300px;
+    min-height:600px;
 }
 
 /*  for medical history widget */
